[package]
name = "ipfs-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = { version = "0.11.1", features = ["serde"] }
multihash ="0.19.3"
multicodec = "0.1.0" 
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.37.0" , features = ["full"]}
fjall = "2.5.0"
tempfile = "3.3"
infer = "0.19.0"
thiserror = "1.0"