[package]
name = "ipfs-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3.16"  # or whatever the latest version is
cid = { version = "0.11.1", features = ["serde"] }
multihash ="0.19.3"
multicodec = "0.1.0" 
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.37.0" , features = ["full"]}
fjall = "2.5.0"
tempfile = "3.3"
infer = "0.19.0"
thiserror = "1.0"
libipld = "0.16"
sha2 = "0.10"
derive_more = "0.99.17"
serde_json = "1.0"
queues = "1.0.2"
actix-web = "4"
futures = "0.3"
paris = "1.5"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
actix-cors = "0.6"
